# repo-review-agent

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: pages.yml
docs/: index.md  quickstart.md
docs/guides/: architecture.md  cost.md  extending.md  supported-repos.md
docs/reference/: cli.md  compliance.md  output.md
docs/usage/: basic.md  bedrock.md  healthcare.md
examples/: README.md
guides/architecture/: index.html
guides/cost/: index.html
guides/extending/: index.html
guides/supported-repos/: index.html
quickstart/: index.html
reference/cli/: index.html
reference/compliance/: index.html
reference/output/: index.html
search/: search_index.json
src/repo_intel_agent/: __init__.py  agent.py  analyzer.py  cli.py  compliance_scanner.py  docgen.py  llm.py  models.py  word_generator.py
templates/: README.md
usage/basic/: index.html
usage/bedrock/: index.html
usage/healthcare/: index.html
